--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: ansible to install pymysql
   ansible.builtin.pip:
     name:
-    - pymsysql
+    - pymysql
     executable: pip3.9
 
 - name: install MYSQL server
@@ -14,21 +14,21 @@
     state: started
     enabled: yes
 
-# - name: connect to mysql server
-#   community.mysql.mysql_info:
-#     login_user: root
-#     login_password: "{{ mysql_root_password }}"
-#     login_host: "{{ login_host }}"
-#   ignore errors: true
-#   register: mysql_info
-
 - name: connect to mysql server
   community.mysql.mysql_info:
     login_user: root
     login_password: "{{ mysql_root_password }}"
     login_host: "{{ login_host }}"
-  ignore_errors: true
+  ignore errors: true
   register: mysql_info
+
+# - name: connect to mysql server
+#   community.mysql.mysql_info:
+#     login_user: root
+#     login_password: "{{ mysql_root_password }}"
+#     login_host: "{{ login_host }}"
+#   ignore_errors: true
+#   register: mysql_info
 
 - name: print mysql info
   ansible.builtin.debug:
