--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -15,13 +15,13 @@
     enabled: yes
 
 - name: connect to mysql server
-  communiti.mysql.mysql_info:
+  community.mysql.mysql_info:
     login_user: root
     login_password: "{{ mysql_root_password }}"
     login_host: "{{ login_host }}"
   ignore errors: true
   register: mysql_info
-  
+
 # - name: connect to mysql server
 #   community.mysql.mysql_info:
 #     login_user: root
