--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -27,9 +27,9 @@
     dest: /usr/share/nginx/html
     remote_src: yes
 
-- name: copy expense conf
-  ansible.builtin.copy:
-    src: expense.conf
+- name: copy expense conf #copy only works for files without variables
+  ansible.builtin.template:
+    src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
 
 - name: restart the nginx
