--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -19,7 +19,7 @@
   - name: import tasks from common role
     ansible.builtin.import_role:
       name: common
-      taks from: app-pre-req
+      tasks_from: app-pre-req
 
   - name: install dependencies
     ansible.builtin.command: npm install
