--- a/roles/common/tasks/app-pre-req.yaml
+++ b/roles/common/tasks/app-pre-req.yaml
@@ -6,7 +6,7 @@
 
 - name: create app directory
   ansible.builtin.file:
-    path: "{{ app_location }}""
+    path: "{{ app_location }}"
     state: directory
 
 - name: "download the {{ component }} code"
