--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,6 +1,7 @@
 - name: install nginx and run
   hosts: all
   become: yes
+  serial: 3
   tasks:
   - name: install nginx
     ansible.builtin.package:
